--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,89 @@
 .t-box li span {
   font-weight: bold;
 }
+ul.pagination {
+  float: right;
+}
+ul.pagination li {
+  display: block;
+  margin-left: 1px;
+  margin-right: 1px;
+}
+ul.pagination li a,
+ul.pagination li span {
+  position: relative;
+  padding: .5rem .75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+}
+ul.pagination li:first-child {
+  border: 1px solid #dee2e6;
+}
+ul.pagination li.active span {
+  background-color: #007bff;
+  color: #ffffff;
+}
+h3.title {
+  text-align: center;
+  font-size: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  border-bottom: 1px solid #e1e1e1;
+}
+.t-nav {
+  width: 70%;
+}
+.t-nav li {
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  width: 100%;
+  font-weight: bold;
+}
+@media screen and (max-width: 760px) {
+  .t-nav {
+    display: none;
+  }
+}
+#login {
+  background-image: url("../img/background.png");
+  background-size: auto;
+}
+#login h1 {
+  margin-top: 30px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+#login .login-logo {
+  text-align: center;
+  background: rgba(225, 225, 225, 0.6);
+}
+#login .login-logo img {
+  width: 300px;
+}
+#login .section {
+  background: rgba(225, 225, 225, 0.6);
+  padding: 10px;
+  margin-top: 20px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#login .section .title {
+  font-size: 22px;
+  font-weight: bold;
+}
+#login .section form {
+  text-align: center;
+}
+#login .section form .form-group {
+  text-align: left;
+}
+#login .section form .form-group label {
+  font-weight: bold;
+}
