--- a/public/css/main.less
+++ b/public/css/main.less
@@ -17,3 +17,95 @@
     }
   }
 }
+
+ul.pagination {
+  float: right;
+  li {
+    display: block;
+    margin-left: 1px;
+    margin-right: 1px;
+    a, span {
+      position: relative;
+      padding: .5rem .75rem;
+      margin-left: -1px;
+      line-height: 1.25;
+      color: #007bff;
+      background-color: #fff;
+      border: 1px solid #dee2e6;
+    }
+    &:first-child {
+      border: 1px solid #dee2e6;
+    }
+    &.active {
+      span {
+        background-color: #007bff;
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+h3.title {
+  text-align: center;
+  font-size: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.t-nav {
+  width: 70%;
+  li {
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .t-nav {
+    display: none;
+  }
+}
+
+#login {
+  background-image: url("../img/background.png");
+  background-size: auto;
+  h1 {
+    margin-top: 30px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+  .login-logo {
+    text-align: center;
+    background: rgba(225, 225, 225, 0.6);
+    img {
+      width: 300px;
+    }
+  }
+  .section {
+    background: rgba(225, 225, 225, 0.6);
+    padding: 10px;
+    margin-top: 20px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    .title {
+      font-size: 22px;
+      font-weight: bold;
+    }
+    form {
+      text-align: center;
+      .form-group {
+        text-align: left;
+        label {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
